[package]
name = "trevm-it"
version = "0.1.0"
edition = "2021"

[dependencies]
# trevm
trevm = { version = "0.14", features = ["full_env_cfg"] }

# Alloy base crates
alloy-primitives = "0.8"
alloy-sol-types = { version = "0.8", features = ["json"] }

# Alloy periphery crates
alloy = { version = "=0.5.4", features = ["full", "rpc-types-mev", "genesis", "arbitrary"] }
alloy-contract = { version = "=0.5.4", features = ["pubsub"] }

tokio = { version = "1.41.0", features = ["full", "sync"] }
eyre = "0.6.12"
alloy-rlp = "0.3.9"

